Colaboratory를 통해 생성됨

--- a/hackathon_team06.ipynb
+++ b/hackathon_team06.ipynb
@@ -8982,7 +8982,7 @@
         "input_shape = x_train.shape[1:]\n",
         "print(num_classes, input_shape)"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -9399,7 +9399,7 @@
         "x_train_after = tf.image.resize(x_train_after, (32,32))\n",
         "x_test_after = tf.image.resize(x_test_after, (32,32))"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -9464,7 +9464,7 @@
         "\n",
         "model.summary()\n"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -9697,6 +9697,26 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "save_path = '/content/'\n",
+        "team_name = 'team06'\n",
+        "\n",
+        "model = keras.models.load_model(save_path + 'checkpoint_entire_best' + '.h5')\n",
+        "\n",
+        "save_path = '/content/'\n",
+        "team_name = 'team06'\n",
+        "\n",
+        "# 트레이닝된 전체 모델을 저장합니다.\n",
+        "model.save(save_path +  'model_entire_'+ team_name + '.h5')"
+      ],
+      "metadata": {
+        "id": "WQfzSaKnZVA3"
+      },
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [],
       "metadata": {
@@ -9724,7 +9744,7 @@
         "# 트레이닝된 전체 모델을 저장합니다.\n",
         "model.save(save_path +  'model_entire_'+ team_name + '.h5')"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -9743,7 +9763,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5b743bfa-6c27-4e69-e171-e0079a6e343f"
+        "outputId": "d1999b68-033a-41b5-a0fb-3b635bc1876f"
       },
       "source": [
         "save_path = '/content/'\n",
@@ -9753,24 +9773,24 @@
         "\n",
         "model.evaluate(x_test_after, y_test)"
       ],
-      "execution_count": 7,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1250/1250 [==============================] - 15s 11ms/step - loss: 1.0949 - accuracy: 0.8711\n"
+            "1250/1250 [==============================] - 15s 11ms/step - loss: 1.0590 - accuracy: 0.8739\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[1.0948773622512817, 0.8710500001907349]"
+              "[1.0589975118637085, 0.8738750219345093]"
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 12
         }
       ]
     },
